--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -928,7 +928,7 @@ hr {
 
 }
 
-.button_fav:disabled {
+.button_fav-active {
     background-color: #00CA81;
     color: #00CA81;
 }
@@ -947,7 +947,7 @@ hr {
 }
 
 
-.button_comp:disabled {
+.button_comp-active {
     background-color: #00CA81;
 }
 
@@ -2881,6 +2881,285 @@ hr {
 }
 
 .cart_modal-input button {
+    width: 213px;
+    height: 60px;
+    border-radius: 51px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 56.31px;
+}
+
+.order_modal {
+    z-index: 3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+}
+
+.order_modal-overlay {
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.order_modal-area {
+    border-radius: 18px;
+    position: sticky;
+    z-index: 3;
+    max-width: 944px;
+    margin: 132px auto 0;
+    background-color: #ffffff;
+}
+
+.order_modal-content {
+    padding-top: 58px;
+    padding-bottom: 57px;
+    padding-left: 81px;
+    display: flex;
+    flex-direction: column;
+}
+
+.order_modal-title {
+    font-weight: 40;
+    font-size: 40px;
+    line-height: 62.67px;
+    letter-spacing: -1px;
+}
+
+.order_modal-list {
+    padding-top: 52px;
+    gap: 17px;
+}
+
+.order_list-list {
+    gap: 17px;
+}
+
+.order_modal-text {
+    padding-top: 45px;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 62.67px;
+}
+
+.order_modal-additional {
+    padding-top: 25px;
+    font-weight: 500;
+    font-size: 21.07px;
+    line-height: 29.5px;
+    color: #8B8B8B;
+}
+
+.order_modal-input {
+    padding-top: 46px;
+    display: flex;
+    gap: 15px;
+}
+
+.order_modal-input input {
+    width: 353px;
+    height: 60px;
+    border-radius: 51px;
+    background-color: #F3F3F3;
+    font-weight: 600;
+    font-size: 22.46px;
+    line-height: 56.31px;
+    padding-left: 27px;
+
+}
+
+.order_modal-input button {
+    width: 213px;
+    height: 60px;
+    border-radius: 51px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 56.31px;
+}
+
+.favorite_modal {
+    z-index: 3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+}
+
+.favorite_modal-overlay {
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.favorite_modal-area {
+    border-radius: 18px;
+    position: sticky;
+    z-index: 3;
+    max-width: 944px;
+    margin: 132px auto 0;
+    background-color: #ffffff;
+}
+
+.favorite_modal-content {
+    padding-top: 58px;
+    padding-bottom: 57px;
+    padding-left: 81px;
+    display: flex;
+    flex-direction: column;
+}
+
+.favorite_modal-title {
+    font-weight: 40;
+    font-size: 40px;
+    line-height: 62.67px;
+    letter-spacing: -1px;
+}
+
+.favorites_modal-list {
+    padding-top: 52px;
+    gap: 17px;
+}
+
+.favorite_list-list {
+    gap: 17px;
+}
+
+.favorite_modal-text {
+    padding-top: 45px;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 62.67px;
+}
+
+.favorite_modal-additional {
+    padding-top: 25px;
+    font-weight: 500;
+    font-size: 21.07px;
+    line-height: 29.5px;
+    color: #8B8B8B;
+}
+
+.favorite_modal-input {
+    padding-top: 46px;
+    display: flex;
+    gap: 15px;
+}
+
+.favorite_modal-input input {
+    width: 353px;
+    height: 60px;
+    border-radius: 51px;
+    background-color: #F3F3F3;
+    font-weight: 600;
+    font-size: 22.46px;
+    line-height: 56.31px;
+    padding-left: 27px;
+
+}
+
+.favorite_modal-input button {
+    width: 213px;
+    height: 60px;
+    border-radius: 51px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 56.31px;
+}
+
+.compare_modal {
+    z-index: 3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+}
+
+.compare_modal-overlay {
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.compare_modal-area {
+    border-radius: 18px;
+    position: sticky;
+    z-index: 3;
+    max-width: 944px;
+    margin: 132px auto 0;
+    background-color: #ffffff;
+}
+
+.compare_modal-content {
+    padding-top: 58px;
+    padding-bottom: 57px;
+    padding-left: 81px;
+    display: flex;
+    flex-direction: column;
+}
+
+.compare_modal-title {
+    font-weight: 40;
+    font-size: 40px;
+    line-height: 62.67px;
+    letter-spacing: -1px;
+}
+
+.compare_modal-list {
+    padding-top: 52px;
+    gap: 17px;
+}
+
+.compare_list-list {
+    gap: 17px;
+}
+
+.compare_modal-text {
+    padding-top: 45px;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 62.67px;
+}
+
+.compare_modal-additional {
+    padding-top: 25px;
+    font-weight: 500;
+    font-size: 21.07px;
+    line-height: 29.5px;
+    color: #8B8B8B;
+}
+
+.compare_modal-input {
+    padding-top: 46px;
+    display: flex;
+    gap: 15px;
+}
+
+.compare_modal-input input {
+    width: 353px;
+    height: 60px;
+    border-radius: 51px;
+    background-color: #F3F3F3;
+    font-weight: 600;
+    font-size: 22.46px;
+    line-height: 56.31px;
+    padding-left: 27px;
+
+}
+
+.compare_modal-input button {
     width: 213px;
     height: 60px;
     border-radius: 51px;
