--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1973,8 +1973,8 @@ hr {
 }
 
 .review_block-card-content {
-    width: 326.18px;
-    height: 201.7px;
+    width: auto;
+    height: auto;
 }
 
 .review_top {
