--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,6 +1,6 @@
 @media (max-width: 1200px) {
     .container {
-        margin: 0 10px;
+        padding: 0 10px;
     }
     .navigation {
         gap: 0;
