--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,10 @@ hr {
     color: #353535;
 }
 
+.button_gray:hover {
+    background-color: #E8E8E8;
+}
+
 .button_black {
     background-color: #000000;
     color: #ffffff;
@@ -230,7 +234,7 @@ hr {
 
 .additional_buttons {
     position: relative;
-    width: 100%;
+    width: auto;
     height: 139px;
     background-color: #FFF;
     display: flex;
@@ -579,15 +583,22 @@ hr {
 
 .button_up {
     top: 1px;
+    transition: all 0.3s;
 }
 
 .button_social {
     top: 117px;
     background-color: #00CA81;
+    transition: background-color 0.3s;
+}
+
+.button_social:hover {
+    background-color: #02b373;
 }
 
 .button_basket-small {
     top: 235px;
+    transition: all 0.3s;
 }
 
 .cart_quantity {
@@ -739,6 +750,11 @@ hr {
     background-color: #00CA81;
 }
 
+.button-quiz:hover {
+    transition: background-color 0.3s;
+    background-color: #02b373;
+}
+
 .button-quiz.active {
     transform: scale(0.98);
 }
@@ -845,6 +861,7 @@ hr {
     justify-content: space-between;
     align-items: center;
     position: relative;
+    max-width: 100%;
     width: 1162.77px;
     margin-top: 43.71px;
     margin-bottom: 74.5px;
@@ -927,8 +944,12 @@ hr {
     border: 1px solid #707070;
     border-radius: 50%;
     background-color: #F6F6F6;
-    transition: 0.3s;
+    transition: all 0.3s;
+}
 
+.button_fav:hover{
+    transition: all 0.3s;
+    background-color: #00CA81;
 }
 
 .button_fav-active {
@@ -949,6 +970,9 @@ hr {
     transition: 0.3s;
 }
 
+.button_comp:hover{
+    background-color: #00CA81;
+}
 
 .button_comp-active {
     background-color: #00CA81;
@@ -1133,6 +1157,11 @@ hr {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s;
+}
+
+.button-addToCart:hover {
+    background-color: #e6e3e3;
 }
 
 .catalog_additional {
@@ -2476,6 +2505,11 @@ hr {
     background-color: #ffffff;
     border: 1px solid #000000;
     border-radius: 11.34px;
+    transition: all 0.3s;
+}
+
+.button-contacts:hover {
+    background-color: #F3F3F3;
 }
 
 .contacts_address {
@@ -2795,6 +2829,11 @@ hr {
     height: 116.09px;
     height: 31px;
     background-color: #ffffff;
+    transition: all 0.3s;
+}
+
+.button_option:hover {
+    color: #00CA81;
 }
 
 .catalog_area-right {
@@ -2847,6 +2886,39 @@ hr {
     padding-left: 81px;
     display: flex;
     flex-direction: column;
+}
+
+.cart_modal-close {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid black
+}
+
+.cart_modal-close::before {
+    position: absolute;
+    top: 18px;
+    left: 3px;
+    content: '';
+    background-color: #0F1419;
+    width: 35px;
+    transform: rotate(45deg);
+    height: 2px;
+}
+
+.cart_modal-close::after {
+    position: absolute;
+    top: 18px;
+    left: 3px;
+    content: '';
+    background-color: #0F1419;
+    width: 35px;
+    transform: rotate(-45deg);
+    height: 2px;
 }
 
 .cart_modal-title {
