--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,12 +298,11 @@ hr {
 .additional_features {
     display: flex;
     justify-content: space-between;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 17px;
     line-height: 20.2px;
     gap: 19px;
     align-items: center;
-    letter-spacing: -1px;
     width: auto;
     height: 68px;
 }
@@ -322,13 +321,6 @@ hr {
     letter-spacing: -1px;
 }
 
-.search-icon {
-    display: flex;
-    gap: 3px;
-    flex-direction: column;
-    align-items: center;
-}
-
 .search {
     display: flex;
     transition: all 0.5s;
@@ -341,11 +333,6 @@ hr {
     text-decoration: none;
 }
 
-.search:hover {
-    color: #00CA81;
-    transition: fill 0.3s;
-}
-
 /*.search:hover > .search-area {*/
 /*    width: 190px;*/
 /*    padding: 0 6px;*/
@@ -355,6 +342,8 @@ hr {
 
 .search:hover > .search-button {
     background-color: #F6F6F6;
+    transform: translateX(0.5px);
+    transition: 0.3s;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -376,9 +365,15 @@ hr {
     transition: all 0.3s;
 }
 
+.search-button {
+    gap: 2px;
+    transition: 0.3s;
+}
+
 .search-area-active {
     width: 190px;
     padding: 0 6px;
+    transition: 0.3s;
     display: block;
 }
 
@@ -429,10 +424,6 @@ hr {
 .button_favorites {
     padding: 10px 11px;
     border-radius: 10.79px;
-}
-
-.acc {
-
 }
 
 .button_acc {
@@ -2849,8 +2840,12 @@ hr {
 
 .catalog_area-right {
     padding-top: 39px;
-    width: 253px;
-    height: 207px;
+    width: auto;
+    height: auto;
+}
+
+.catalog_area-list {
+    display: none;
 }
 
 .catalog_area-right ul {
@@ -2899,7 +2894,7 @@ hr {
     flex-direction: column;
 }
 
-.cart_modal-close {
+.modal-close {
     display: none;
     position: absolute;
     right: 0;
@@ -2910,7 +2905,7 @@ hr {
     border: 1px solid black
 }
 
-.cart_modal-close::before {
+.modal-close::before {
     position: absolute;
     top: 18px;
     left: 3px;
@@ -2921,7 +2916,7 @@ hr {
     height: 2px;
 }
 
-.cart_modal-close::after {
+.modal-close::after {
     position: absolute;
     top: 18px;
     left: 3px;
@@ -3270,6 +3265,7 @@ hr {
 }
 
 .modal_item {
+    list-style-type: none;
     display: flex;
     gap: 28px;
 }
@@ -3366,4 +3362,12 @@ hr {
 
 .slick-slide {
     margin: 0 55px;
+}
+
+.compare_list-item {
+    list-style-type: none;
+}
+
+.favorite_list-item {
+    list-style-type: none;
 }
